--- a/css/comm.css
+++ b/css/comm.css
@@ -5,7 +5,7 @@
   #header .logo {
     display: none;
   }
-  #header .p_tit {
+  #header .p_tit.comm {
     display: block;
     font-weight: bold;
   }
@@ -38,17 +38,22 @@
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_bn {
-    margin: 4% 4% 0 4%;
+    margin: 5% 4% 0 4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_bn {
-    margin: 8% 4% 0 4%;
+    margin: 5% 4% 0 4%;
   }
 }
 #con_page .con_bn .box_bn {
-  background-color: #EDE7FE;
+  background-color: #f9f9f9;
   box-sizing: border-box;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn .box_bn {
+    background-color: white;
+  }
 }
 #con_page .con_post {
   margin: 0 5% 0 5%;
@@ -82,126 +87,48 @@
     margin-bottom: 2%;
   }
 }
-#con_page .con_post .box_post .box_profile {
-  margin-bottom: 20px;
+#con_page .con_post .box_post .wrp_profile {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 @media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_profile {
+  #con_page .con_post .box_post .wrp_profile {
     margin-bottom: 3%;
   }
 }
-#con_page .con_post .box_post .box_profile .user_info {
-  align-items: center;
-  display: flex;
-  width: 65%;
-}
-#con_page .con_post .box_post .box_profile .user_info .box_pic {
-  position: relative;
-}
-#con_page .con_post .box_post .box_profile .user_info .box_pic .pic {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-#con_page .con_post .box_post .box_profile .user_info .box_pic .ic_md {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  line-height: 1;
-}
-#con_page .con_post .box_post .box_profile .user_info .txt_info {
-  margin-left: 10px;
-  width: calc(100% - 48px);
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_profile .user_info .txt_info {
-    margin-left: 4%;
-  }
-}
-#con_page .con_post .box_post .box_profile .user_info .txt_info .info {
-  display: inline-flex;
-  align-items: center;
-  width: 100%;
-  font-size: 113%;
-  font-weight: normal;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_post .box_post .box_profile .user_info .txt_info .info {
-    font-size: 113%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_profile .user_info .txt_info .info {
-    font-size: 82%;
-  }
-}
-#con_page .con_post .box_post .box_profile .user_info .txt_info .info span {
-  display: inline-block;
-}
-#con_page .con_post .box_post .box_profile .user_info .txt_info .info .star {
-  margin: 0 4px 0 8px;
-  line-height: 0;
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_profile .user_info .txt_info .info .star {
-    margin: 0 2% 0 3%;
-  }
-}
-#con_page .con_post .box_post .box_profile .user_info .txt_info .info .star img {
-  width: 8px;
-}
-#con_page .con_post .box_post .box_profile .user_info .txt_info .info .score {
-  font-size: 69%;
-  font-weight: normal;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_post .box_post .box_profile .user_info .txt_info .info .score {
-    font-size: 75%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_profile .user_info .txt_info .info .score {
-    font-size: 57%;
-  }
-}
-#con_page .con_post .box_post .box_profile .user_info .txt_info .world {
-  font-size: 82%;
-  font-weight: normal;
-  color: #a4a4a4;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_post .box_post .box_profile .user_info .txt_info .world {
-    font-size: 82%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_profile .user_info .txt_info .world {
-    font-size: 69%;
-  }
-}
-#con_page .con_post .box_post .box_profile .cate {
+#con_page .con_post .box_post .wrp_profile .cate {
   width: 35%;
   font-size: 88%;
   font-weight: normal;
   text-align: right;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_post .box_post .box_profile .cate {
-    font-size: 88%;
+  #con_page .con_post .box_post .wrp_profile .cate {
+    font-size: 94%;
   }
 }
 @media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_profile .cate {
-    font-size: 75%;
+  #con_page .con_post .box_post .wrp_profile .cate {
+    font-size: 69%;
+  }
+}
+#con_page .con_post .box_post .box_txt {
+  font-size: 113%;
+  font-weight: normal;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_post .box_post .box_txt {
+    font-size: 113%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_post .box_post .box_txt {
+    font-size: 88%;
   }
 }
 #con_page .con_post .box_post .box_txt .tit {
   font-weight: bold;
-  font-size: 113%;
-  font-weight: normal;
   font-weight: 600;
   margin-bottom: 8px;
   display: -webkit-box;
@@ -210,31 +137,14 @@
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: break-all;
-  max-height: 60px;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_post .box_post .box_txt .tit {
-    font-size: 113%;
-  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_post .box_post .box_txt .tit {
-    font-size: 82%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_txt .tit {
-    margin-bottom: 3%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_txt .tit {
-    max-height: 45px;
+    margin-bottom: 2%;
   }
 }
 #con_page .con_post .box_post .box_txt .txt {
-  font-size: 100%;
-  font-weight: normal;
+  font-size: 0.8em;
   color: #a4a4a4;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -242,22 +152,48 @@
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: break-all;
-  max-height: 82px;
 }
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_post .box_post .box_txt .txt {
-    font-size: 100%;
-  }
+#con_page .con_post .box_post .box_util {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  font-size: 69%;
+  font-weight: normal;
+  color: #a4a4a4;
 }
 @media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_txt .txt {
+  #con_page .con_post .box_post .box_util {
+    margin-top: 3%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_post .box_post .box_util {
     font-size: 69%;
   }
 }
 @media only screen and (max-width: 767px) {
-  #con_page .con_post .box_post .box_txt .txt {
-    max-height: 60px;
+  #con_page .con_post .box_post .box_util {
+    font-size: 57%;
   }
+}
+#con_page .con_post .box_post .box_util .icons {
+  width: 50%;
+  display: inline-block;
+}
+#con_page .con_post .box_post .box_util .icons p {
+  display: inline-block;
+  margin-left: 8px;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_post .box_post .box_util .icons p {
+    margin-left: 3%;
+  }
+}
+#con_page .con_post .box_post .box_util .icons p span {
+  padding: 0 0.3em;
+}
+#con_page .con_post .box_post .box_util .icons p:first-child {
+  margin-left: 0;
 }
 @media only screen and (min-width: 1200px) {
   #con_page .con_post .box_post .box_txt a:hover .tit {
