--- a/css/scss/comm.scss
+++ b/css/scss/comm.scss
@@ -2,14 +2,12 @@
 @import "settings";
 
 #header {
-  .box_gnav li:nth-child(2) a {
-    opacity: 1;
-  }
+  .box_gnav li:nth-child(2) a {opacity: 1;}
   @include mq(sp) {
     .logo {
       display: none;
     }
-	.p_tit {
+	.p_tit.comm {
 		display: block;
 		font-weight: bold;
 	}
@@ -31,16 +29,15 @@
 	}
 
 	.con_bn {
-		@include cV(margin, 50px 5% 0 5%, 4% 4% 0 4%, 8% 4% 0 4%);
+		@include cV(margin, 50px 5% 0 5%, 5% 4% 0 4%, 5% 4% 0 4%);
 		.box_bn {
-			background-color: $pointColorLight;
+			@include cV(background-color, $whiteGray, white);
 			box-sizing: border-box;
 		}
 	}
 
 	.con_post {
 		@include cV(margin, 0 5% 0 5%, 0 4% 0 4%, 0 4% 0 4%);
-
 		max-width: 970px;
 		.box_post {
 			background-color: white;
@@ -49,54 +46,10 @@
 			box-sizing: border-box;
 			@include cV(padding, 20px, 4%);
 			@include cV(margin-bottom, 16px, 2%);
-			.box_profile {
-				@include cV(margin-bottom, 20px, 3%);
+			.wrp_profile {
 				display: flex;
 				justify-content: space-between;
-				.user_info {
-					align-items: center;
-					display: flex;
-					width: 65%;
-					.box_pic {
-						position: relative;
-						.pic {
-							width: 48px;
-							height: 48px;
-							border-radius: 50%;
-							overflow: hidden;
-						}
-						.ic_md {
-							position: absolute;
-							right: 0;
-							bottom: 0;
-							line-height: 1;
-						}
-					}
-					.txt_info {
-						@include cV(margin-left, 10px, 4%);
-						width: calc(100% - 48px);
-						.info {
-							display: inline-flex;
-							align-items: center;
-							width: 100%;
-							@include txt_l;
-							span {
-								display: inline-block;
-							}
-							.star {
-								@include cV(margin, 0 4px 0 8px, 0 2% 0 3%);
-								line-height: 0;
-								img {width: 8px;}
-							}
-							.score {@include txt_mini;} 
-						}
-						.world {
-							@include txt_xs;
-							color: $dkGray;
-
-						}
-					}
-				}
+				@include cV(margin-bottom, 10px, 3%);
 				.cate {
 					width: 35%;
 					@include txt_s;
@@ -104,22 +57,21 @@
 				}
 			}
 			.box_txt {
+				@include txt_l;
 				.tit {
 					font-weight: bold;
-					@include txt_l;
 					font-weight: 600;
-					@include cV(margin-bottom, 8px, 3%);
+					@include cV(margin-bottom, 8px, 2%);
 					display: -webkit-box;
 					-webkit-box-orient: vertical;
 					-webkit-line-clamp: 2;
 					overflow: hidden;
 					text-overflow: ellipsis;
 					word-break: break-all;
-					@include cV(max-height, 60px, 45px);
 
 				}
 				.txt {
-					@include txt_m;
+					font-size: 0.8em;
 					color: $dkGray;
 					display: -webkit-box;
 					-webkit-box-orient: vertical;
@@ -127,9 +79,29 @@
 					overflow: hidden;
 					text-overflow: ellipsis;
 					word-break: break-all;
-					@include cV(max-height, 82px, 60px);
 
 					
+				}
+			}
+			.box_util {
+				display: flex;
+				justify-content: space-between;
+				@include cV(margin-top, 20px, 3%);
+				@include txt_mini;
+				color: $dkGray;
+				.icons {
+					width: 50%;
+					display: inline-block;
+					p {
+						display: inline-block;
+						@include cV(margin-left, 8px, 3%);
+						span {
+							padding: 0 0.3em;
+						}
+						&:first-child {
+							margin-left: 0;
+						}
+					}
 				}
 			}
 			@include mq(pc) {
